tests/paczka1/fuzzy1/94957683.err
Error in line 11: BmUbo A30 78,3
Error in line 23: OoRJ0D A414 19,8
Error in line 30: BmUbo A30 70,6
Error in line 20: r0I48h A637 55,3
